check all forms for required inputs and this commit before global changes still work great))

--- a/app/kontakty.html
+++ b/app/kontakty.html
@@ -185,12 +185,8 @@
 							</div>
 						</div>
 
-
-
-
 						<h2> Частный дом или квартира? </h2>
-
-						<p> Актуальной проблемой в больших городах является доступное и комфортное жильё. Наиболее привлекательным решением представляется строительство быстровозводимого дома, цена которого минимальна, а комфорт и качество неоспоримы. </p>
+						<p> Актуальной проблемой в больших городах является доступное и комфортное жильё. Наиболее привлекательным решением представляется строительство быстровозводимого дома, цена которого минимальна, а комфорт и качество неоспоримы.</p>
 
 						<script type="text/javascript">
 							function toggle_show(id) {
@@ -224,178 +220,150 @@
 									<li>собственность и земля.</li>
 								</ul>
 
-								<h2> Быстровозводимый дом, а цена как у квартиры </h2>			 
+								<h2> Быстровозводимый дом, а цена как у квартиры</h2>			 
 								<p>Наша Компания поможет Вам быстро и недорого построить свой дом, учитывая все Ваши пожелания.</p>
-								<p>Мы производим все необходимые составляющие для строительства надежного дома. </p>
+								<p>Мы производим все необходимые составляющие для строительства надежного дома.</p>
 								<p>Каркас Вашего дома будет из железобетонных колонн и ригелей. Трехслойные панельные стены, укрепленные арматурой.</p>
 								<p>У панелей, для удобства делаем 2 слоя: внутри - гладкий, специально для покрытия обоями и наружный под окраску.</p>
 								<p>Перекрытия в Вашем доме будут сделаны также из трехслойных панелей: ребристая плита, утеплитель и бетонная стяжка.</p>
 
 								<p><strong>Важно! Главное достоинство нашей технологии &mdash; скорость и качество строений.</strong></p>
 								<p>Завод домокомплектов &laquo;КПД 100&raquo; производит материалов и комплектующих на 8-12 коттеджей в месяц.</p>
-								<p><strong>Внимание! Железобетонная рама, состоящая из колонн и ригелей у нас имеет несущую функцию. </strong></span><span>Этот принцип также используется при строительстве монолитных домов и позволяет нам делать свободную планировку и потолки любой высоты.<br /><br /></span>
+								<p><strong>Внимание! Железобетонная рама, состоящая из колонн и ригелей у нас имеет несущую функцию. </strong></p>
+								<span>Этот принцип также используется при строительстве монолитных домов и позволяет нам делать свободную планировку и потолки любой высоты.<br/><br/></span>
 
-									<span><strong>СПРАВКА! </strong></span><span><strong>Кроме изменения несущей функции мы улучшили технологию и самих панелей.</strong></p>
-										<p>Наши панели длинные до 6 метров и горизонтальные - это позволило уменьшить количество швов и структуру. А надежные перекрытия уже давно положительно себя зарекомендовали при строительстве быстровозводимых домов. Всё это позволяет добиться прочности и долговечности наших строений.</p>
-										<p>Ваш дом будет сделан в течение 1 месяца из качественных трехслойных панелей от завода - изготовителя, колон и ригелей, а также любых составляющих по Вашему усмотрению. Срок гарантии на дом от 50 лет. <br /></span><span>Мы можем построить дом на Вашем участке , а также Вы можете приобрести один из наших участков в понравившемся Вам районе города.</p>
-											<span><strong>Важно! Вы приобретаете быстровозводимый дом, уже с готовым фасадом, утеплителем, ровными стенами для косметического ремонта по доступной цене с гарантией от 50 лет!</strong></span>
-										</div>
-									</p>
-
-
-								</article>
+								<span><strong>СПРАВКА!</strong></span>
+								<span><strong>Кроме изменения несущей функции мы улучшили технологию и самих панелей.</strong></span>
+								<p>Наши панели длинные до 6 метров и горизонтальные - это позволило уменьшить количество швов и структуру. А надежные перекрытия уже давно положительно себя зарекомендовали при строительстве быстровозводимых домов. Всё это позволяет добиться прочности и долговечности наших строений.</p>
+								<p>Ваш дом будет сделан в течение 1 месяца из качественных трехслойных панелей от завода - изготовителя, колон и ригелей, а также любых составляющих по Вашему усмотрению. Срок гарантии на дом от 50 лет.<br/></p>
+								<p>Мы можем построить дом на Вашем участке , а также Вы можете приобрести один из наших участков в понравившемся Вам районе города.</p>
+								<p><strong>Важно! Вы приобретаете быстровозводимый дом, уже с готовым фасадом, утеплителем, ровными стенами для косметического ремонта по доступной цене с гарантией от 50 лет!</strong></p>
 							</div>
-						</div>
-					</div>
+						</p>
 
-
-
-
-
-
-
-					<div class="widget-20">
-						<div id="map"></div>
-					</div>
-
-
-
-
-
-					<div class="editorElement layer-type-block ui-droppable block-18" >
-						<div class="editorElement layer-type-block ui-droppable block-16" >
-							<div class="layout column layout_37" >
-								<div class="editorElement layer-type-block ui-droppable block-15" >
-
-
-									<div class="editable_block-35 widget-21 editorElement layer-type-widget">
-										<div class="body">
-											<div class="text"><div class="align-elem"><p>Перепечатка и использование материалов с данного сайта, разрешена только по согласию с владельцем.  </p></div></div>
-
-										</div>
-									</div>
-
-
-									<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
-
-										<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
-											<div class="align-elem">Copyright &copy; 2019<br/></div>
-										</div>
-
-									</div>
-								</div>
-							</div>
-							<div class="layout column layout_38" >
-								<div class="phones-38 widget-23 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-									<div class="inner">
-										<label class="cell-icon" for="tg-phones-38">
-											<div class="icon"></div>
-										</label>
-										<input id="tg-phones-38" class="tgl-but" type="checkbox">
-										<div class="block-body-drop">
-											<div class="cell-text">
-												<div class="title"><div class="align-elem">Бесплатная консультация</div></div>
-												<div class="text_body">
-													<div class="align-elem">
-														<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-
-							</div>
-							<div class="layout column layout_39" >
-								<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
-									<div class="inner">
-										<label class="cell-icon" for="tg39">
-											<div class="icon"></div>
-										</label>
-										<input id="tg39" class="tgl-but" type="checkbox">
-										<div class="block-body-drop">
-											<div class="cell-text">
-												<div class="title"><div class="align-elem">Нас легко найти</div></div>
-												<div class="text_body">
-													<div class="align-elem">680000 Россия, г. Хабаровск, ул. Иркутская, 8</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-
-							</div>
-							<div class="layout column layout_41" >
-								<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
-									<div class="icon"></div>
-								</div>
-							</div>
-						</div>
-						<div class="editorElement layer-type-block ui-droppable block-17" >
-							<div class="layout column layout_43" >
-								<div class="mega-copyright widget-27 widget-type-mega_copyright editorElement layer-type-widget">
-									<span style='font-size:10px;' class='copyright'>
-										<a href="https://e2.group/" rel="nofollow" target="_blank" title="e2.group" class="copyright">e2.group</a>
-									</span>
-								</div> 
-							</div>
-						</div>
-					</div>
+					</article>
 				</div>
+			</div>
+		</div>
 
 
-				<div class="d-none">
+		<div class="widget-20">
+			<div id="map"></div>
+		</div>
 
-					<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
-						<div class="success">
-							<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
-						</div>
-						<h4>Позвоните нам, для бесплатной консультации</h4>
-						<span>
-							<a href="tel:+7 (4212) 69-81-00">
-								<svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>
-							+7 (4212) 69-81-00</a>
-						</span>
-						<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
-						<!-- Hidden Required Fields -->
-						<input type="hidden" name="project_name" value="КПД-100">
-						<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
-						<!-- END Hidden Required Fields -->
-						<div class="inputs">
-							<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
-							<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
-							<input class="input" type="text" name="email" placeholder="E-mail" required>
-						</div>
-						<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
-						<div class="confirm">
-							<input class="checkbox" type="checkbox" checked required />
-							<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
-						</div>
-					</form>
 
-				</div>
-
+		<div class="editorElement layer-type-block ui-droppable block-18" >
+			<div class="editorElement layer-type-block ui-droppable block-16" >
 				
+				<div class="layout column layout_37" >
+					<div class="editorElement layer-type-block ui-droppable block-15" >
 
-				<!-- Replace Phone Number -->
-				<script type="text/javascript">
-					(function ct_load_script() {
-						var ct = document.createElement('script'); ct.type = 'text/javascript';
-						ct.src = document.location.protocol+'//cc.calltracking.ru/phone.fa91b.9328.async.js?nc='+Math.floor(new Date().getTime()/300000);
-						var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ct, s);
-					})();
-				</script>
-				<!-- Replace Phone Number -->
+						<div class="editable_block-35 widget-21 editorElement layer-type-widget">
+							<div class="body">
+								<div class="text"><div class="align-elem"><p>Перепечатка и использование материалов с данного сайта, разрешена только по согласию с владельцем.</p></div></div>
+							</div>
+						</div>
 
-				<!-- assets.bottom -->
-				<script src="//cdn.callibri.ru/callibri.js" type="text/javascript" charset="utf-8"></script>
-				<script src="site.min.js@1557895225" type="text/javascript" ></script>
-				<script src="defender.min.js@1557895225" type="text/javascript" ></script>
-				<script type="text/javascript" >/*<![CDATA[*/
-				$ite.start({"sid":2350529,"vid":2368879,"aid":2808709,"cp":3,"active":"0","domain":"2340896.3.oml.ru","lang":"ru","trusted":true,"debug":false});
-				/*]]>*/</script>
-				<!-- /assets.bottom -->
+						<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
+							<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
+								<div class="align-elem">Copyright &copy; 2019<br/></div>
+							</div>
+						</div>
 
-			</body>
+					</div>
+				</div>
 
-			</html>
+				<div class="layout column layout_38" >
+					<div class="phones-38 widget-23 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+						<div class="inner">
+							<label class="cell-icon" for="tg-phones-38">
+								<div class="icon"></div>
+							</label>
+							<input id="tg-phones-38" class="tgl-but" type="checkbox">
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Бесплатная консультация</div></div>
+									<div class="text_body">
+										<div class="align-elem">
+											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+				</div>
+
+				<div class="layout column layout_39" >
+					<div class="address-39 widget-24 address-block contacts-block widget-type-contacts_address editorElement layer-type-widget">
+						<div class="inner">
+							<label class="cell-icon" for="tg39">
+								<div class="icon"></div>
+							</label>
+							<input id="tg39" class="tgl-but" type="checkbox">
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Нас легко найти</div></div>
+									<div class="text_body">
+										<div class="align-elem">680000 Россия, г. Хабаровск, ул. Иркутская, 8</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="layout column layout_41" >
+					<div class="up-41 widget-25 up_button widget-type-button_up editorElement layer-type-widget" data-speed="900">
+						<div class="icon"></div>
+					</div>
+				</div>
+
+			</div>
+
+			<div class="editorElement layer-type-block ui-droppable block-17" >
+				<div class="layout column layout_43" >
+					<div class="mega-copyright widget-27 widget-type-mega_copyright editorElement layer-type-widget">
+						<span style='font-size:10px;' class='copyright'>
+							<a href="https://e2.group/" rel="nofollow" target="_blank" title="e2.group" class="copyright">e2.group</a>
+						</span>
+					</div> 
+				</div>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="d-none">
+
+		<form class="popup-form zoom-anim-dialog form white-bg" id="take-information">
+			<div class="success">
+				<p><span>Спасибо за заявку!<br><span>Наш менеджер свяжется с вами в течение рабочего дня!</span></span></p>
+			</div>
+			<h4>Позвоните нам, для бесплатной консультации</h4>
+			<span>
+				<a href="tel:+7 (4212) 69-81-00"><svg width="25" height="25" viewBox="0 0 27 34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" fill="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" fill="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" fill="white"/><path d="M8.99953 1L13.4995 9L9.99952 11L5.49953 3L8.99953 1Z" stroke="white"/><path d="M3.99953 4C0.99311 5.29987 -0.318684 10.0036 1.99955 16.5C4.36771 23.1363 7.99943 29 13 32C14.6489 32.9893 18.3729 33.5443 20.9995 32.5L16.5 25.5C14.0006 26 11.8019 23.802 11.5 23.5C11.121 23.1208 9.02731 20.9295 7.99943 16.5C7.30475 13.5063 8.49943 12 8.49943 12C8.49943 12 5.83283 6.83333 3.99953 4Z" stroke="white"/><path d="M17.9994 24.5L20.9995 22.5L25.9994 30L22.9994 32L17.9994 24.5Z" stroke="white"/></svg>+7 (4212) 69-81-00</a>
+			</span>
+			<p>Или оставьте заявку и наш менеджер <br>свяжется с вами</p>
+			<!-- Hidden Required Fields -->
+			<input type="hidden" name="project_name" value="КПД-100">
+			<input type="hidden" name="form_subject" value="КПД-100 | Заявка на консультацию">
+			<!-- END Hidden Required Fields -->
+			<div class="inputs">
+				<input class="input" type="text" name="Имя" placeholder="Ваше имя" required>
+				<input class="input phone" id="phone" type="text" name="Телефон" placeholder="Номер телефона" required>
+				<input class="input" type="text" name="email" placeholder="E-mail" required>
+			</div>
+			<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
+			<div class="confirm">
+				<input class="checkbox" type="checkbox" checked required />
+				<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
+			</div>
+		</form>
+
+	</div>
+
+</body>
+
+</html>
