edit houses page

--- a/app/houses.html
+++ b/app/houses.html
@@ -280,7 +280,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
-														<div class="house-price"><span>2.45 млн ₽</span></div>
+														<div class="house-price"><span>2.50 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg" alt="Дом 101кв. м."></span>
 													</a>
@@ -299,7 +299,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_2/scheme.jpg" data-fancybox="house-people_2">
-														<div class="house-price"><span>2.99 млн ₽</span></div>
+														<div class="house-price"><span>3.10 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg" alt="Дом 133кв. м"></span>
 													</a>
@@ -314,7 +314,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3">
-														<div class="house-price"><span>3.55 млн ₽</span></div>
+														<div class="house-price"><span>3.69 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
@@ -329,7 +329,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/people_4/scheme.jpg" data-fancybox="house-people_4">
-														<div class="house-price"><span>4.65 млн ₽</span></div>
+														<div class="house-price"><span>4.79 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
 														<span class="img-convert img-cover"><img src="img/houses/people_4/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
@@ -362,7 +362,10 @@
 
 
 
-						<!-- <div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
+
+
+
+						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
 								<div class="description">
@@ -380,7 +383,7 @@
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
-														<div class="house-price"><span>3.48 млн ₽</span></div>
+														<div class="house-price"><span>2.80 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg" alt="Дом 101кв. м."></span>
 													</a>
@@ -391,46 +394,57 @@
 														<a class="image fancybox" href="img/houses/classic_1/5.jpg" data-fancybox="house-classic_1"></a>
 														<a class="image fancybox" href="img/houses/classic_1/scheme.jpg" data-fancybox="house-classic_1"></a>
 													</div>
-													<span class="title"><span class="align-elem">Общая площадь 106,59кв. м.</span></span>
-													<div class="text"><div class="align-elem"><p>Площадь дома 102кв. м.</p></div></div>
+													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
 												</div>
 											</div>
 
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
-														<div class="house-price"><span>3.99 млн ₽</span></div>
+														<div class="house-price"><span>3.43 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg" alt="Дом 133кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg" alt="Дом 101кв. м."></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/classic_2/2.jpg" data-fancybox="house-classic_2"></a>
 														<a class="image fancybox" href="img/houses/classic_2/3.jpg" data-fancybox="house-classic_2"></a>
-														<a class="image fancybox" href="img/houses/classic_2/4.jpg" data-fancybox="house-classic_2"></a>
-														<a class="image fancybox" href="img/houses/classic_2/5.jpg" data-fancybox="house-classic_2"></a>
 														<a class="image fancybox" href="img/houses/classic_2/scheme.jpg" data-fancybox="house-classic_2"></a>
 													</div>
-													<span class="title"><span class="align-elem">Общая площадь 138,74кв. м.</span></span>
-													<div class="text"><div class="align-elem"><p>Площадь дома 134кв. м.</p></div></div>
+													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
 												</div>
 											</div>
 
 											<div class="item-outer">
 												<div class="item">
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg" data-fancybox="house-classic_3">
-														<div class="house-price"><span>4.49 млн ₽</span></div>
+														<div class="house-price"><span>4.07 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
 														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg" alt="Дом 166кв. м"></span>
 													</a>
 													<div class="d-none">
 														<a class="image fancybox" href="img/houses/classic_3/2.jpg" data-fancybox="house-classic_3"></a>
 														<a class="image fancybox" href="img/houses/classic_3/3.jpg" data-fancybox="house-classic_3"></a>
-														<a class="image fancybox" href="img/houses/classic_3/4.jpg" data-fancybox="house-classic_3"></a>
-														<a class="image fancybox" href="img/houses/classic_3/5.jpg" data-fancybox="house-classic_3"></a>
 														<a class="image fancybox" href="img/houses/classic_3/scheme.jpg" data-fancybox="house-classic_3"></a>
 													</div>
-													<span class="title"><span class="align-elem">Общая площадь 171,27кв. м.</span></span>
-													<div class="text"><div class="align-elem"><p>Площадь дома 171кв. м.</p></div></div>
+													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
+												</div>
+											</div>
+
+											<div class="item-outer">
+												<div class="item">
+													<a class="image fancybox" href="img/houses/classic_4/scheme.jpg" data-fancybox="house-classic_4">
+														<div class="house-price"><span>5.26 млн ₽</span></div>
+														<div class="item-label"><div class="align-elem">Акция</div></div>
+														<span class="img-convert img-cover"><img src="img/houses/classic_4/sm.jpg" alt="Дом 166кв. м"></span>
+													</a>
+													<div class="d-none">
+														<!-- <a class="image fancybox" href="img/houses/classic_4/2.jpg" data-fancybox="house-classic_4"></a> -->
+													</div>
+													<span class="title"><span class="align-elem">Общая площадь 169,15кв. м.</span></span>
+													<div class="text"><div class="align-elem"><p>Площадь дома 165,63кв. м.</p></div></div>
 												</div>
 											</div>
 
@@ -451,7 +465,7 @@
 									</div>
 								</div>
 							</div>
-						</div> -->
+						</div>
 
 
 
@@ -637,42 +651,29 @@
 								<h2>Что входит в цену дома:</h2>
 								<h3><span>Самое важное, Вы получаете дом уже с готовым фасадом, утеплителем, идеально ровными стенами, готовыми под обои – и все это с гарантией от 50 лет!</span></h3>
 								<ul>
-									<li>
-										<p><span>Фундамент – буронабивной;</span></p>
-									</li>
-									<li>
-										<p><span>Несущий каркас дома из железобетонных колонн и ригелей;</span></p>
-									</li>
-									<li>
-										<p><span>Трехслойные стеновые панели: облицовка- железобетон, высокоэффективный утеплитель толщиной 15см и снова железобетон;</span></p>
-									</li>
-									<li>
-										<p><span>Ребристые плиты перекрытия;</span></p>
-									</li>
-									<li>
-										<p><span>Лестница межэтажная деревянная;</span></p>
-									</li>
-									<li>
-										<p><span>Окна ПВХ: трехкамерный профиль,  двухкамерный стеклопакет;</span></p>
-									</li>
-									<li>
-										<p><span>Дверь входная - уличная утепленная металлодеревянная;</span></p>
-									</li>
-									<li>
-										<p><span>Обустройство террасы на кровле: устройство мембраны, покрытие террасной доской;</span></p>
-									</li>
-									<li>
-										<p><span>Обустройство террасы на входной группе;</span></p>
-									</li>
-									<li>
-										<p><span>Ограждающие конструкции из дерева на балконе / террасах: перила, парапеты;</span></p>
-									</li>
-									<li>
-										<p><span>Лестница металлодеревянная на крыльцо дома;</span></p>
-									</li>
-									<li>
-										<p><span>Ровные стены внутри дома, пол и потолок.</span></p>
-									</li>
+									<li><p><span>Фундамент буронабивной от 3 до 4м глубиной;</span></p></li>
+									<li><p><span>Перекрытия: ребристые ж/б плиты с утеплением на 1 этаже + бетон; деревянное межэтажное перекрытие (ж/б перекрытие для домов "Классика"), ребристые ж/б плиты перекрытия с утеплением на кровле;</span></p></li>
+									<li><p><span>Трехслойные стеновые панели с утеплением: внешний фасад - бетон 6см + утеплитель 15см + бетон 8 см;</span></p></li>
+									<li><p><span>Кровля - односкатная под уклоном, устройство рулонной кровли (Народный дом), стропильная система, четырехскатная холодная кровля с водосточной системой и подшивкой софитами (Дома Классика);</span></p></li>
+									<li><p><span>Лестница межэтажная деревянная с состариванием и шлифованием;</span></p></li>
+									<li><p><span>Окна ПВХ, входная утепленная дверь;</span></p></li>
+									<li><p><span>Фасад - под каменные блоки, окрас в цвет - на выбор клиента;</span></p></li>
+									<li><p><span>Стояки холодного водоснабжения  и канализации, подключение к сетям;</span></p></li>
+									<li><p><span>Вентиляция;</span></p></li>
+									<li><p><span>Крыльцо,  балконы с ограждением - ковка;</span></p></li>
+									<li><p><span>Внутренняя отделка: <strong>чистовая отделка</strong>, шпатлевка внешних стен;</span></p></li>
+								</ul>
+
+								<h3><span>Дополнительно оплачиваются:</span></h3>
+								<ul>
+									<li><p><span>Перегородки межкомнатные: от 100 тыс. до 170 тыс р.;</span></p></li>
+									<li><p><span>Навес под авто - 150 000р.;</span></p></li>
+									<li><p><span>Разводка электрики по дому - в зависимости от площади дома, расчитывается индивидуально;</span></p></li>
+									<li><p><span>Увеличение высоты этажа на каждые 10 см за каждый этаж - 30 тыс, 35 тыс, 40 тыс, 45 тыс, в зависимости от площади дома;</span></p></li>
+									<li><p><span>Устройство холодной стропильной кровли с водосточной системой и подшивкой софитами (в линейке Народный дом) - 250 тыс, 300 тыс, 350 тыс, 400 тыс р.;</span></p></li>
+									<li><p><span>Устройство водосточной системы в линейке Народный дом - от 50 тыс до 70 тыс р.;</span></p></li>
+									<li><p><span>Покраска окон в любой цвет (50 тыс, 70 тыс, 90 тыс, 120 тыс);</span></p></li>
+									<li><p><span>Межэтажные бетонные перекрытия в линейке Народный дом - 30 тыс, 40 тыс, 50 тыс, 60 тыс.р.;</span></p></li>
 								</ul>
 
 								<h2 class="next-h">Пирог кровли</h2>
