--- a/app/houses.html
+++ b/app/houses.html
@@ -14,11 +14,11 @@
 	<link rel="stylesheet" href="title.styles.css?v=2.4">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.5">
+	<link rel="stylesheet" href="css/main.min.css?v=2.8">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
-	<script type="text/javascript" src="js/scripts.min.js?v=2.7"></script>
+	<script type="text/javascript" src="js/scripts.min.js?v=2.8"></script>
 	<!-- CUSTOM JS CODE -->
 
 	<script src="adaptiveimage.js"></script>
@@ -256,6 +256,11 @@
 
 
 
+
+
+
+
+
 						<div class="editorElement layer-type-block ui-droppable block-11 gray-bg">
 							<div class="blocklist-23 widget-13 horizontal_mode widget-type-block_list editorElement layer-type-widget" data-slider="0,0,1,1,1" data-swipe="0,0,1,1,1" data-setting-mode="horizontal" data-setting-pause="4000" data-setting-auto="1" data-setting-controls="1,1,0,0,0" data-setting-pager="1,1,1,1,1" data-setting-pager_selector=".blocklist-23 .pager-wrap" data-setting-prev_selector=".blocklist-23 .prev" data-setting-next_selector=".blocklist-23 .next" data-setting-count="3,3,3,3,3" data-setting-columns="3,2,2,1,1" data-setting-move="" data-setting-prev_text="" data-setting-next_text="" data-setting-auto_controls_selector=".blocklist-23 .auto_controls" data-setting-auto_controls="0,0,0,0,0" data-setting-autoControlsCombine="0" data_photo_swipe="0" item_id="23" data-setting-vertical_aligner="none">
 
@@ -282,14 +287,14 @@
 													<a class="image fancybox" href="img/houses/people_1/1.jpg" data-fancybox="house-people_1">
 														<div class="house-price"><span>2.50 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg" alt="Дом 101кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_1/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1"></a>
-														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1"></a>
-														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1"></a>
-														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1"></a>
-														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1"></a>
+														<a class="image fancybox" href="img/houses/people_1/2.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/3.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/4.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/5.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/people_1/scheme.jpg" data-fancybox="house-people_1" data-thumb="img/houses/classic_2/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -301,7 +306,7 @@
 													<a class="image fancybox" href="img/houses/people_2/scheme.jpg" data-fancybox="house-people_2">
 														<div class="house-price"><span>3.10 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg" alt="Дом 133кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_2/sm.jpg?v=1.1" alt="Дом 120кв. м"></span>
 													</a>
 													<div class="d-none">
 														<!-- <a class="image fancybox" href="img/houses/people_2/2.jpg" data-fancybox="house-people_2"></a> -->
@@ -316,7 +321,7 @@
 													<a class="image fancybox" href="img/houses/people_3/scheme.jpg" data-fancybox="house-people_3">
 														<div class="house-price"><span>3.69 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg" alt="Дом 166кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/people_3/sm.jpg?v=1.1" alt="Дом 150кв. м"></span>
 													</a>
 													<div class="d-none">
 														<!-- <a class="image fancybox" href="img/houses/people_3/2.jpg" data-fancybox="house-people_3"></a> -->
@@ -325,23 +330,6 @@
 													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
 												</div>
 											</div>
-
-											<div class="item-outer">
-												<div class="item">
-													<a class="image fancybox" href="img/houses/people_4/scheme.jpg" data-fancybox="house-people_4">
-														<div class="house-price"><span>4.79 млн ₽</span></div>
-														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/people_4/sm.jpg" alt="Дом 166кв. м"></span>
-													</a>
-													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/people_4/2.jpg" data-fancybox="house-people_4"></a> -->
-													</div>
-													<span class="title"><span class="align-elem">Общая площадь 169,15кв. м.</span></span>
-													<div class="text"><div class="align-elem"><p>Площадь дома 165,63кв. м.</p></div></div>
-												</div>
-											</div>
-
-
 
 										</div>
 									</div>
@@ -359,6 +347,8 @@
 								</div>
 							</div>
 						</div>
+
+
 
 
 
@@ -385,14 +375,14 @@
 													<a class="image fancybox" href="img/houses/classic_1/1.jpg" data-fancybox="house-classic_1">
 														<div class="house-price"><span>2.80 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg" alt="Дом 101кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_1/sm.jpg?v=1.1" alt="Дом 90кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/classic_1/2.jpg" data-fancybox="house-classic_1"></a>
-														<a class="image fancybox" href="img/houses/classic_1/3.jpg" data-fancybox="house-classic_1"></a>
-														<a class="image fancybox" href="img/houses/classic_1/4.jpg" data-fancybox="house-classic_1"></a>
-														<a class="image fancybox" href="img/houses/classic_1/5.jpg" data-fancybox="house-classic_1"></a>
-														<a class="image fancybox" href="img/houses/classic_1/scheme.jpg" data-fancybox="house-classic_1"></a>
+														<a class="image fancybox" href="img/houses/classic_1/2.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_1/3.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_1/4.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_1/5.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_1/scheme.jpg" data-fancybox="house-classic_1" data-thumb="img/houses/classic_1/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 90,04кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 84,76кв. м.</p></div></div>
@@ -404,12 +394,14 @@
 													<a class="image fancybox" href="img/houses/classic_2/1.jpg" data-fancybox="house-classic_2">
 														<div class="house-price"><span>3.43 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg" alt="Дом 101кв. м."></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_2/sm.jpg?v=1.1" alt="Дом 120кв. м."></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/classic_2/2.jpg" data-fancybox="house-classic_2"></a>
-														<a class="image fancybox" href="img/houses/classic_2/3.jpg" data-fancybox="house-classic_2"></a>
-														<a class="image fancybox" href="img/houses/classic_2/scheme.jpg" data-fancybox="house-classic_2"></a>
+														<a class="image fancybox" href="img/houses/classic_2/2.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_2/3.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_2/4.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_2/5.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_2/scheme.jpg" data-fancybox="house-classic_2" data-thumb="img/houses/classic_2/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 120,54кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 117,02кв. м.</p></div></div>
@@ -421,34 +413,19 @@
 													<a class="image fancybox" href="img/houses/classic_3/1.jpg" data-fancybox="house-classic_3">
 														<div class="house-price"><span>4.07 млн ₽</span></div>
 														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg" alt="Дом 166кв. м"></span>
+														<span class="img-convert img-cover"><img src="img/houses/classic_3/sm.jpg?v=1.1" alt="Дом 150кв. м"></span>
 													</a>
 													<div class="d-none">
-														<a class="image fancybox" href="img/houses/classic_3/2.jpg" data-fancybox="house-classic_3"></a>
-														<a class="image fancybox" href="img/houses/classic_3/3.jpg" data-fancybox="house-classic_3"></a>
-														<a class="image fancybox" href="img/houses/classic_3/scheme.jpg" data-fancybox="house-classic_3"></a>
+														<a class="image fancybox" href="img/houses/classic_3/2.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_2/2.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_3/3.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_2/3.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_3/4.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_2/4.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_3/5.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_2/5.jpg"></a>
+														<a class="image fancybox" href="img/houses/classic_3/scheme.jpg" data-fancybox="house-classic_3" data-thumb="img/houses/classic_2/scheme.jpg"></a>
 													</div>
 													<span class="title"><span class="align-elem">Общая площадь 150,19кв. м.</span></span>
 													<div class="text"><div class="align-elem"><p>Площадь дома 146,67кв. м.</p></div></div>
 												</div>
 											</div>
-
-											<div class="item-outer">
-												<div class="item">
-													<a class="image fancybox" href="img/houses/classic_4/scheme.jpg" data-fancybox="house-classic_4">
-														<div class="house-price"><span>5.26 млн ₽</span></div>
-														<div class="item-label"><div class="align-elem">Акция</div></div>
-														<span class="img-convert img-cover"><img src="img/houses/classic_4/sm.jpg" alt="Дом 166кв. м"></span>
-													</a>
-													<div class="d-none">
-														<!-- <a class="image fancybox" href="img/houses/classic_4/2.jpg" data-fancybox="house-classic_4"></a> -->
-													</div>
-													<span class="title"><span class="align-elem">Общая площадь 169,15кв. м.</span></span>
-													<div class="text"><div class="align-elem"><p>Площадь дома 165,63кв. м.</p></div></div>
-												</div>
-											</div>
-
-
 
 										</div>
 									</div>
