--- a/app/index.html
+++ b/app/index.html
@@ -103,32 +103,7 @@
 				</div>
 			</div>
 
-			<div class="editorElement layer-type-block ui-droppable block-4">
-
-				<div class="layout column layout_16"></div>
-
-				<div class="layout column layout_9"></div>
-				<div class="layout column layout_9">
-					<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
-						<div class="inner">
-							<label class="cell-icon" for="tg-phones-9">
-								<div class="icon"></div>
-							</label>
-							<input id="tg-phones-9" class="tgl-but" type="checkbox">
-							<div class="block-body-drop">
-								<div class="cell-text">
-									<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
-									<div class="text_body">
-										<div class="align-elem">
-											<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+			
 
 			<div class="editorElement layer-type-block ui-droppable block-8" >
 				<div class="layout column layout_13" >
@@ -152,7 +127,7 @@
 									</div>
 								</div>
 
-								<div class="text"><div class="align-elem"><p>Гарантируем точный объем продукции в соответствии с заказом</p></div></div>
+								<div class="text"><div class="align-elem"><p>Гарантируем точный объем продукции <br>в соответствии с заказом</p></div></div>
 
 							</div>
 						</div>
@@ -160,7 +135,47 @@
 					</div>
 				</div>
 				<div class="layout column layout_14" >
+
+					<div class="editorElement layer-type-block ui-droppable block-4">
+						<div class="layout column layout_16"></div>
+						<div class="layout column layout_9"></div>
+						<div class="layout column layout_9">
+							<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
+								<div class="inner">
+									<label class="cell-icon" for="tg-phones-9">
+										<div class="icon"></div>
+									</label>
+									<input id="tg-phones-9" class="tgl-but" type="checkbox">
+									<div class="block-body-drop">
+										<div class="cell-text">
+											<div class="text_body">
+												<div class="align-elem">
+													<div><a href="tel:+7 (4213) 69-81-00">+7 (4212) 69-81-00</a></div>
+												</div>
+											</div>
+											<div class="title"><div class="align-elem">Ответим на все ваши вопросы</div></div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
 					<div class="email-14 widget-9 email-block contacts-block widget-type-contacts_email editorElement layer-type-widget">
+
+						<div class="inner">
+							<label class="cell-icon" for="tg-email-14">
+								<div class="icon instagram"></div>
+							</label>
+							<div class="block-body-drop">
+								<div class="cell-text">
+									<div class="title"><div class="align-elem">Email:</div></div>
+									<div class="text_body">
+										<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
+									</div>
+								</div>
+							</div>
+						</div>
 
 						<div class="inner">
 							<label class="cell-icon" for="tg-email-14">
@@ -172,20 +187,6 @@
 									<div class="title"><div class="align-elem">Email:</div></div>
 									<div class="text_body">
 										<div class="align-elem"><a href="mailto:kpd100zavod@gmail.com">kpd100zavod@gmail.com</a></div>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="inner">
-							<label class="cell-icon" for="tg-email-14">
-								<div class="icon instagram"></div>
-							</label>
-							<div class="block-body-drop">
-								<div class="cell-text">
-									<div class="title"><div class="align-elem">Email:</div></div>
-									<div class="text_body">
-										<div class="align-elem"><a href="https://www.instagram.com/kpd100zavod.ru/" target="blank">instagram.com/kpd100zavod.ru</a></div>
 									</div>
 								</div>
 							</div>
