new styles for index.html

--- a/app/index.html
+++ b/app/index.html
@@ -317,7 +317,7 @@
 				<div class="editable_block-28 widget-16 blocklist-23 editorElement layer-type-widget">
 					<div class="body">
 						<div class="title">
-							<div class="align-elem">Цех по производству ЖБИ</div>
+							<h2 class="align-elem">Цех по производству ЖБИ</h2>
 						</div>
 						<div class="image">
 							<span class="img-convert img-cover">
@@ -345,7 +345,7 @@
 				<div class="editable_block-28 widget-16 blocklist-23 editorElement layer-type-widget">
 					<div class="body">
 						<div class="title">
-							<div class="align-elem">Цех производства металлоконструкций</div>
+							<h2 class="align-elem">Цех производства металлоконструкций</h2>
 						</div>
 						<div class="image">
 							<span class="img-convert img-cover">
@@ -415,7 +415,7 @@
 				<div class="editable_block-28 widget-16 blocklist-23 editorElement layer-type-widget">
 					<div class="body">
 						<div class="title">
-							<div class="align-elem">Деревообрабатывающий цех</div>
+							<h2 class="align-elem">Деревообрабатывающий цех</h2>
 						</div>
 						<div class="image">
 							<span class="img-convert img-cover">
@@ -488,7 +488,7 @@
 						<div class="header_text"><div class="align-elem">Все для Вашего удобства</div></div>
 					</div>
 
-					<div class="description"><div class="align-elem"><h2 class="align-elem" wm-editable="true" contenteditable="false">Наши преимущества&nbsp;<br></h2></div></div>
+					<div class="description"><div class="align-elem"><h3 class="align-elem" wm-editable="true" contenteditable="false">Наши преимущества&nbsp;<br></h3></div></div>
 					<div class="body-outer" data-columns="0,0,0,0,0">
 						<div class="body">
 							<div class="swipe-shadow-left"></div>
@@ -764,7 +764,7 @@
 								<div class="item">
 
 									<span class="title"><span class="align-elem">Вся продукция на заводе сертифицирована, <br>имеет паспорта качества.</span></span> 
-									<img src="img/panels.jpg" class="img-responsive" alt="плита">
+									<img src="img/panels.jpg" class="img-responsive bordered-image" alt="плита">
 									<span class="title"><span class="align-elem">Наша ребристая плита 6х1,2м. держит<br>феноменальные 13 тонн - это 1,8т/м<sup>2</sup>.</span></span> 
 
 								</div>
@@ -786,7 +786,7 @@
 
 			</div>
 
-			<h2><strong>Купить готовый дом в Хабаровске, это</strong><strong> </strong><strong>рационально</strong></h2>
+			<h2><strong>Купить готовый дом в Хабаровске, это рационально</strong></h2>
 
 			<script type="text/javascript">
 				function toggle_show(id) {
@@ -794,8 +794,8 @@
 				}
 			</script>
 
-			<a onClick="toggle_show('bla-bla2')">Подробнее... 
-				<div id="bla-bla2" style="display: none">			
+			<a onClick="toggle_show('bla-bla2')">Подробнее...
+				<div id="bla-bla2" style="display: none">
 					<p>Для многих граждан России уже решен вопрос, во что вложиться &ndash; в квартиру или в собственный дом. Если есть возможность взять хороший участок под строительство, то большинство семей склоняются к варианту отдельного дома. Решение жилищного вопроса с помощью домокомплектов, предлагаемых заводом &laquo;КПД 100&raquo; Хабаровска, удовлетворит потребителя и в плане комфорта и цены.</p>
 					<h3><strong>Строительство и продажа домов в Хабаровске </strong></h3>
 					<p>Завод &laquo;КПД 100&raquo;, предпочитает полный контроль над всеми этапами возведения коттеджей, загородных и дачных домов, за строительство которых он берется. Предприятие добилось этого, взяв в свои руки:</p>
@@ -844,7 +844,7 @@
 					</div>
 
 					<div class="site-copyright widget-22 widget-type-site_copyright editorElement layer-type-widget">
-						<div class="align-elem">Copyright &copy; 2019<br/></div>
+						<div class="align-elem">Copyright &copy; 2020<br/></div>
 					</div>
 				</div>
 			</div>
