edit styles, make more light and white all

--- a/app/frames.html
+++ b/app/frames.html
@@ -12,6 +12,7 @@
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
 	<link rel="stylesheet" href="styles.css?v=1.1">
+	<link rel="stylesheet" href="title.styles.css?v=2.4">
 
 	<!-- CUSOM CSS CODE -->
 	<link rel="stylesheet" href="css/main.min.css?v=2.5">
@@ -70,9 +71,12 @@
 			</div>
 			<div class="side-panel-mask"></div>
 			<div class="side-panel-content">
-				<div class="side-panel-close"></div>		<div class="side-panel-content-inner"></div>
+				<div class="side-panel-close"></div>
+				<div class="side-panel-content-inner"></div>
 			</div>
 		</div>
+
+
 
 		<div class="editorElement layer-type-block ui-droppable block-6" >
 			<div class="editorElement layer-type-block ui-droppable block-3" >
@@ -118,8 +122,7 @@
 
 
 		<div class="editorElement layer-type-block ui-droppable block-4">
-			<div class="layout column layout_16">
-			</div>
+			<div class="layout column layout_16"></div>
 			<div class="layout column layout_9"></div>
 			<div class="layout column layout_9">
 				<div class="phones-9 widget-6 phones-block contacts-block widget-type-contacts_phone editorElement layer-type-widget">
