--- a/app/uslugi.html
+++ b/app/uslugi.html
@@ -10,10 +10,10 @@
 	<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<link rel="icon" href="img/favicon/favicon.ico">
 	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link rel="stylesheet" href="title.styles.css?v=2.4">
+	<link rel="stylesheet" href="title.styles.css?v=2.5">
 
 	<!-- CUSOM CSS CODE -->
-	<link rel="stylesheet" href="css/main.min.css?v=2.5">
+	<link rel="stylesheet" href="css/main.min.css?v=2.6">
 	<!-- CUSOM CSS CODE -->
 
 	<!-- CUSTOM JS CODE -->
@@ -70,7 +70,8 @@
 			</div>
 			<div class="side-panel-mask"></div>
 			<div class="side-panel-content">
-				<div class="side-panel-close"></div>		<div class="side-panel-content-inner"></div>
+				<div class="side-panel-close"></div>
+				<div class="side-panel-content-inner"></div>
 			</div>
 		</div>   
 
