add new technology images and remove not using libraries

--- a/app/index.html
+++ b/app/index.html
@@ -41,8 +41,6 @@
 	<noscript><div><img src="https://mc.yandex.ru/watch/57525343" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 	<!-- /Yandex.Metrika counter -->
 
-	<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
-
 </head>
 
 <body>
@@ -205,21 +203,33 @@
 				<div class="editable_block-28 widget-16 blocklist-23 editorElement layer-type-widget">
 					<div class="body">
 						<div class="title"><h2 class="align-elem">Наша технология</h2></div>
+
 						<div class="image">
 							<span class="img-convert img-cover">
-
 								<div class="item-outer">
 									<div class="item">
-										<a class="image fancybox" href="img/scheme.jpg">
-											<div class="item-label"><div class="align-elem">Акция</div></div>
-											<span class="img-convert img-cover"><img src="img/scheme.jpg" alt="15 лет на строительном рынке"></span>
-											<div class="image-inner"></div>
+										<a class="image fancybox" href="img/technology-people-big.jpg">
+											<div class="item-label"></div>
+											<span class="img-convert img-cover"><img src="img/technology-people-small.jpg" alt="15 лет на строительном рынке"></span>
 										</a>
 									</div>
 								</div>
 							</span>
-							<div class="image-inner"></div>
 						</div>
+
+						<div class="image">
+							<span class="img-convert img-cover">
+								<div class="item-outer">
+									<div class="item">
+										<a class="image fancybox" href="img/technology-classic-big.jpg">
+											<div class="item-label"></div>
+											<span class="img-convert img-cover"><img src="img/technology-classic-small.jpg" alt="15 лет на строительном рынке"></span>
+										</a>
+									</div>
+								</div>
+							</span>
+						</div>
+
 					</div>
 				</div>
 			</div>
@@ -951,12 +961,17 @@
 		</div>
 		<button class="button button-wline submit-button"><span>Оставить заявку</span></button>
 		<div class="confirm">
-			<input class="checkbox" type="checkbox" checked required />
+			<input class="checkbox" type="checkbox" checked required/>
 			<p class="personal-data">Нажимая на кнопку, я даю свое согласие на обработку <br>персональных данных и соглашаюсь с условиями <br>политики конфиденциальности</p>
 		</div>
 	</form>
 
 </div>
+
+
+
+<script src="//code-ya.jivosite.com/widget/ztIhj2B2eb" async></script>
+
 
 </body>
 
